--- a/starter-code.ipynb
+++ b/starter-code.ipynb
@@ -68,10 +68,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import requests\n",
@@ -80,10 +78,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
    "source": [
     "URL = \"http://www.reddit.com/hot.json\""
@@ -91,13 +87,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "## YOUR CODE HERE"
+    "## send a request to reddit getting the \n",
+    "res = requests.get(URL, headers = {'User-agent': 'project3 Bot 0.1'})"
    ]
   },
   {
@@ -114,11 +109,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = res.json()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {
-    "collapsed": true
+    "scrolled": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "#Checking to see that there's stuff there. Don't worry, there is.\n",
+    "#data"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -147,13 +154,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 8,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "## YOUR CODE HERE"
+    "#writing to a json file in my project\n",
+    "import json\n",
+    "\n",
+    "with open('./data/my_data.json', 'w') as f:\n",
+    "    json.dump(data, f, indent=4, sort_keys=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#reading from a json file in my project\n",
+    "with open('./data/my_data.json', 'r') as f:\n",
+    "    data = json.load(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import time\n",
+    "\n",
+    "for i in range(9): \n",
+    "    #makes a total of 10, or 250 posts. We'll see how much I really need/collect\n",
+    "    last_title = data['data']['after']\n",
+    "    "
    ]
   },
   {
@@ -168,9 +202,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "## YOUR CODE HERE"
@@ -191,7 +223,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
     "focus": false,
     "id": "783fd153-28ac-47ab-bfca-27e7c1de95b4"
    },
@@ -224,7 +255,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
     "focus": false,
     "id": "588f9845-6143-4bcc-bfd1-85d45b79303d"
    },
@@ -253,7 +283,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
     "focus": false,
     "id": "c20d2498-151c-44c3-a453-3a333c79a0ac"
    },
@@ -276,7 +305,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
     "focus": false,
     "id": "87a17d3d-b7f4-4747-9f75-f9af1d18a174"
    },
@@ -299,7 +327,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
     "focus": false,
     "id": "ddbc6159-6854-4ca7-857f-bfecdaf6d9c2"
    },
@@ -325,9 +352,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "## YOUR CODE HERE"
@@ -348,7 +373,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
     "focus": false,
     "id": "269b9e7c-60b5-4a06-8255-881d7395bc1b"
    },
@@ -367,9 +391,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "## YOUR CODE HERE"
@@ -391,9 +413,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "## YOUR CODE HERE"
@@ -428,7 +448,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
     "focus": false,
     "id": "4239e458-28bd-4675-8db3-c1d9c02b9854"
    },
@@ -455,7 +474,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.5"
   },
   "varInspector": {
    "cols": {
