trying out the readme

--- a/Data-Gathering-Script.ipynb
+++ b/Data-Gathering-Script.ipynb
@@ -18,6 +18,16 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "import time, requests\n",
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -47,14 +57,12 @@
     }
    ],
    "source": [
-    "import time, requests\n",
-    "import pandas as pd\n",
     "import pixiedust"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,18 +72,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "jsons = {'talesfromtechsupport':pd.DataFrame(), 'LFG':pd.DataFrame(), 'nosleep':pd.DataFrame()}\n",
+    "# LFG':pd.DataFrame(), 'nosleep':pd.DataFrame(), \n",
+    "jsons = {'talesfromtechsupport':pd.DataFrame(), 'buildapc':pd.DataFrame()}\n",
     "the_headers = {'User-agent': 'project3 Bot 0.4'}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "pixiedust": {
      "displayParams": {}
@@ -119,35 +127,24 @@
       "11 12 13 14 15 16 17 18 19 20 \n",
       "21 22 23 24 25 26 27 28 29 30 \n",
       "31 32 33 34 35 36 37 38 39 \n",
-      "talesfromtechsupport  temp df shape (978, 16)\n",
+      "talesfromtechsupport  temp df shape (979, 16)\n",
       "\n",
       "\n",
       "\n",
       "\n",
-      "LFG Iterations:\n",
-      "\n",
-      "01 02 03 04 05 06 07 08 09 10 \n",
-      "11 12 13 14 15 16 17 18 19 20 \n",
-      "21 22 23 24 25 26 27 28 29 30 \n",
-      "31 32 33 34 35 36 \n",
-      "LFG  temp df shape (921, 16)\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "nosleep Iterations:\n",
+      "buildapc Iterations:\n",
       "\n",
       "01 02 03 04 05 06 07 08 09 10 \n",
       "11 12 13 14 15 16 17 18 19 20 \n",
       "21 22 23 24 25 26 27 28 29 30 \n",
-      "31 32 \n",
-      "nosleep  temp df shape (816, 16)\n",
+      "31 32 33 34 35 36 37 38 39 \n",
+      "buildapc  temp df shape (992, 16)\n",
       "\n",
       "\n",
       "\n",
       "\n",
-      "CPU times: user 3.83 s, sys: 309 ms, total: 4.14 s\n",
-      "Wall time: 5min 56s\n"
+      "CPU times: user 2.36 s, sys: 157 ms, total: 2.51 s\n",
+      "Wall time: 4min 29s\n"
      ]
     }
    ],
@@ -213,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -230,16 +227,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(978, 16)\n",
-      "(921, 16)\n",
-      "(816, 16)\n"
+      "(979, 16)\n",
+      "(992, 16)\n"
      ]
     }
    ],
@@ -250,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {
     "scrolled": true
    },
@@ -259,7 +255,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(2715, 16)\n"
+      "(1971, 16)\n"
      ]
     }
    ],
@@ -273,197 +269,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>subreddit</th>\n",
-       "      <th>url</th>\n",
-       "      <th>author</th>\n",
-       "      <th>domain</th>\n",
-       "      <th>downs</th>\n",
-       "      <th>is_self</th>\n",
-       "      <th>is_video</th>\n",
-       "      <th>likes</th>\n",
-       "      <th>media</th>\n",
-       "      <th>num_comments</th>\n",
-       "      <th>num_crossposts</th>\n",
-       "      <th>num_reports</th>\n",
-       "      <th>selftext</th>\n",
-       "      <th>score</th>\n",
-       "      <th>title</th>\n",
-       "      <th>ups</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>talesfromtechsupport</td>\n",
-       "      <td>https://www.reddit.com/r/talesfromtechsupport/...</td>\n",
-       "      <td>MagicBigfoot</td>\n",
-       "      <td>self.talesfromtechsupport</td>\n",
-       "      <td>0</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>77</td>\n",
-       "      <td>0</td>\n",
-       "      <td>None</td>\n",
-       "      <td>Hey, we can have two stickies now!\\n\\n---\\n\\nS...</td>\n",
-       "      <td>1952</td>\n",
-       "      <td>TFTS POSTING RULES (MOBILE USERS PLEASE READ!)</td>\n",
-       "      <td>1952</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>talesfromtechsupport</td>\n",
-       "      <td>https://www.reddit.com/r/talesfromtechsupport/...</td>\n",
-       "      <td>TheTableClothe</td>\n",
-       "      <td>self.talesfromtechsupport</td>\n",
-       "      <td>0</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>56</td>\n",
-       "      <td>0</td>\n",
-       "      <td>None</td>\n",
-       "      <td>I did tech support for a large broadband compa...</td>\n",
-       "      <td>509</td>\n",
-       "      <td>My WiFi isn’t working!</td>\n",
-       "      <td>509</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>talesfromtechsupport</td>\n",
-       "      <td>https://www.reddit.com/r/talesfromtechsupport/...</td>\n",
-       "      <td>miscreancy</td>\n",
-       "      <td>self.talesfromtechsupport</td>\n",
-       "      <td>0</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>155</td>\n",
-       "      <td>0</td>\n",
-       "      <td>None</td>\n",
-       "      <td>Another tale from my days working for $GiantSu...</td>\n",
-       "      <td>1625</td>\n",
-       "      <td>\"It could be worse, this could be a company ma...</td>\n",
-       "      <td>1625</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>talesfromtechsupport</td>\n",
-       "      <td>https://www.reddit.com/r/talesfromtechsupport/...</td>\n",
-       "      <td>I_Have_A_Chode</td>\n",
-       "      <td>self.talesfromtechsupport</td>\n",
-       "      <td>0</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>4</td>\n",
-       "      <td>0</td>\n",
-       "      <td>None</td>\n",
-       "      <td>So this happened friday morning. \\n\\n$chode = ...</td>\n",
-       "      <td>200</td>\n",
-       "      <td>The mysterious missed phone calls!</td>\n",
-       "      <td>200</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>talesfromtechsupport</td>\n",
-       "      <td>https://www.reddit.com/r/talesfromtechsupport/...</td>\n",
-       "      <td>kayakmainac</td>\n",
-       "      <td>self.talesfromtechsupport</td>\n",
-       "      <td>0</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>56</td>\n",
-       "      <td>0</td>\n",
-       "      <td>None</td>\n",
-       "      <td>LTL/FTP\\n\\nSo I work in IT services for a univ...</td>\n",
-       "      <td>493</td>\n",
-       "      <td>A UPS test! During peak time? The day before a...</td>\n",
-       "      <td>493</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "              subreddit                                                url  \\\n",
-       "0  talesfromtechsupport  https://www.reddit.com/r/talesfromtechsupport/...   \n",
-       "1  talesfromtechsupport  https://www.reddit.com/r/talesfromtechsupport/...   \n",
-       "2  talesfromtechsupport  https://www.reddit.com/r/talesfromtechsupport/...   \n",
-       "3  talesfromtechsupport  https://www.reddit.com/r/talesfromtechsupport/...   \n",
-       "4  talesfromtechsupport  https://www.reddit.com/r/talesfromtechsupport/...   \n",
-       "\n",
-       "           author                     domain  downs  is_self  is_video likes  \\\n",
-       "0    MagicBigfoot  self.talesfromtechsupport      0     True     False  None   \n",
-       "1  TheTableClothe  self.talesfromtechsupport      0     True     False  None   \n",
-       "2      miscreancy  self.talesfromtechsupport      0     True     False  None   \n",
-       "3  I_Have_A_Chode  self.talesfromtechsupport      0     True     False  None   \n",
-       "4     kayakmainac  self.talesfromtechsupport      0     True     False  None   \n",
-       "\n",
-       "  media  num_comments  num_crossposts num_reports  \\\n",
-       "0  None            77               0        None   \n",
-       "1  None            56               0        None   \n",
-       "2  None           155               0        None   \n",
-       "3  None             4               0        None   \n",
-       "4  None            56               0        None   \n",
-       "\n",
-       "                                            selftext  score  \\\n",
-       "0  Hey, we can have two stickies now!\\n\\n---\\n\\nS...   1952   \n",
-       "1  I did tech support for a large broadband compa...    509   \n",
-       "2  Another tale from my days working for $GiantSu...   1625   \n",
-       "3  So this happened friday morning. \\n\\n$chode = ...    200   \n",
-       "4  LTL/FTP\\n\\nSo I work in IT services for a univ...    493   \n",
-       "\n",
-       "                                               title   ups  \n",
-       "0     TFTS POSTING RULES (MOBILE USERS PLEASE READ!)  1952  \n",
-       "1                             My WiFi isn’t working!   509  \n",
-       "2  \"It could be worse, this could be a company ma...  1625  \n",
-       "3                 The mysterious missed phone calls!   200  \n",
-       "4  A UPS test! During peak time? The day before a...   493  "
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "main_df.head()"
+    "#main_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
